[package]
name = "payments_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
futures = "0.3.30"
log = "0.4.22"
env_logger = "0.11.5"
tracing-subscriber = "0.3.18"
tokio-console = "0.1"
console-subscriber = "0.4.0"